--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_staggered_grid_view: ^0.7.0
   flutter_rating_bar: ^4.0.1
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
