--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_database: ^10.2.7
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
+  flutter_spinbox: ^0.13.1
 
 dev_dependencies:
   flutter_test:
